Added a comment on safepoint with JVisualVM